--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
         <nav>
           <a href="#company">Company</a>
           <a href="#services">Services</a>
-          <a href="#contact_us">Contact us</a>
           <a href="">Blog</a>
 
         </nav>
-        <a href="" class="btn btn-primary">Contact us</a>
+        <a href="#contact_us" class="btn btn-primary">Contact us</a>
       </div>
     </div>
   </header>
@@ -118,12 +117,12 @@
       <p class="m-0">The group plans to further expand its operations in Europe, North Africa and emerging markets in
         Asia.</p>
     </div>
-    <div class="col-sm-3 col-xs-12 gsapLeft">
-      <div class="mb-2 col-sm-12 col-xs-6 no-padding ">
-        <h2 class="gradient-text text-nowrap">20+</h2>
+    <div class="col-sm-3 col-xs-12 ">
+      <div class="mb-2 col-sm-12 col-xs-6 no-padding gsapLeft">
+        <h2 class="gradient-text text-nowrap ">20+</h2>
         <span class="thin-text">countries</span>
       </div>
-      <div class=" col-sm-12 col-xs-6 no-padding">
+      <div class=" col-sm-12 col-xs-6 no-padding gsapLeft">
         <span class="thin-text">Up to</span>
         <h2 class="gradient-text text-nowrap">25</h2>
         <span class="thin-text">operators</span>
@@ -552,10 +551,10 @@
   <section class="py-3 bg-grey">
     <div class="container">
       <div class="col-sm-5"><img src="" alt="sum_up"></div>
-      <div class="col-sm-7">
-        <p class="mb-2">NetSmart now also offers <span class="text-main">Online Billing Services (OBS)</span>, a
+      <div class="col-sm-7 gsapRight">
+        <p class="mb-2 ">NetSmart now also offers <span class="text-main">Online Billing Services (OBS)</span>, a
           variation of a direct billing service. </p>
-        <p class="mb-2">OBS is
+        <p class="mb-2 ">OBS is
           now made available cross carrier in South Africa. A unique feature of South Africa’s OBS is that it
           provides a <span class="text-main">‘silent billing’</span> model for subscription services.</p>
         <p class="mb-0">There is <span class="text-main">no additional requirement for an
@@ -564,7 +563,7 @@
     </div>
   </section>
   <section id="contact_us">
-    <div class="container">
+    <div class="container  gsapUp">
       <div class="col-sm-12">
         <h2 class="text-center">Talk to us</h2>
       </div>
@@ -582,7 +581,7 @@
         <div class="input-container"><input placeholder=" " id="lastname" class="text-input" type="text"><label for="lastname">Last Name</label></div>
         <div class="input-container"><input placeholder=" " id="email" class="text-input" type="text"><label for="email">Email</label></div>
 
-        <input class="btn btn-primary" type="submit"></div>
+        <input class="btn btn-primary" value="Submit" type="submit"></div>
       </div>
 
     </div>
@@ -590,9 +589,8 @@
   <footer >
 <div class="col-sm-12 py-1 d-flex justify-content-between align-items-center">
   <nav>
-    <a href="">Company</a>
-    <a href="">Services</a>
-    <a href="#contact_us">Contact us</a>
+    <a href="#company">Company</a>
+    <a href="#services">Services</a>
     <a href="">Blog</a>
 
   </nav>
