--- a/index.html
+++ b/index.html
@@ -42,10 +42,19 @@
       </div>
     </div>
   </header>
-  <section  class="herobanner" id="particles-js">
-      <div class="container"><h1 class="cta py-1 text-center">Netsmart is a global leader in mobile payments and messaging.
-      </h1></div>
+  <section class="herobanner" >
+    <div class="herobanner__container d-sm-flex align-items-center">
+      <h1 class="cta py-1 px-2">Netsmart is a global leader in mobile payments and messaging.
+      </h1>
+      <div class="hero__phoneContainer">
+        <div id="phone" class="visible">
+        </div>
+      </div>
+    </div>
+    <video class="herobanner__video" src="img/hero_background.mp4" autoplay="" muted="" loop="" type="video/mp4">
 
+      Your browser does not support the video tag.
+    </video>
   </section>
   <section id="company" class="container py-3">
     <div class="col-md-12 gsapUp">
@@ -60,17 +69,17 @@
     </div>
     <div class="mb-2 clearfix"></div>
     <div class="flex-wrap">
-    <div class="col-sm-8 gsapLeft"><img width="400px" src="img/global.jpg" alt="worldwide"></div>
-    <div class="col-sm-4 col-xs-12 d-flex flex-column justify-content-center gsapRight">
-      <div class="mb-2 col-sm-12 col-xs-6 no-padding ">
-        <h2 class="gradient-text text-nowrap ">1+ Million</h2>
-        <span class="thin-text">Active users</span>
+      <div class="col-sm-8 gsapLeft"><img width="400px" src="img/global.jpg" alt="worldwide"></div>
+      <div class="col-sm-4 col-xs-12 d-flex flex-column justify-content-center gsapRight">
+        <div class="mb-2 col-sm-12 col-xs-6 no-padding ">
+          <h2 class="gradient-text text-nowrap ">1+ Million</h2>
+          <span class="thin-text">Active users</span>
+        </div>
+        <div class=" col-sm-12 col-xs-6 no-padding ">
+          <h2 class="gradient-text text-nowrap">1500+</h2>
+          <span class="thin-text">Satisfied customers</span>
+        </div>
       </div>
-      <div class=" col-sm-12 col-xs-6 no-padding ">
-        <h2 class="gradient-text text-nowrap">1500+</h2>
-        <span class="thin-text">Satisfied customers</span>
-      </div>
-    </div>
     </div>
     <div class="mb-2 clearfix"></div>
     <div class="col-md-12">
@@ -151,7 +160,8 @@
           <div class="col-sm-6 mb-1 gsapRight">
             <div class="rounded_container bg-default">
 
-              <h4 class="mb-1"><img class="inline_icon" src="img/robust_platform.png" height="25" width="35"/>Robust Platform</h4>
+              <h4 class="mb-1"><img class="inline_icon" src="img/robust_platform.png" height="25" width="35"/>Robust
+                Platform</h4>
               <ul class="px-0">
                 <li class="mb-1">Services are fully customized on clients need since it is in-house developed.</li>
                 <li class="mb-0">Our Global API allows a single integration point for all the client’s messaging
@@ -165,9 +175,12 @@
           <div class="col-sm-6 mb-1 gsapLeft">
             <div class="rounded_container bg-default">
 
-              <h4 class="mb-1"><img class="inline_icon" src="img/safe_secure.png" height="35" width="32"/>Safe and Secure</h4>
+              <h4 class="mb-1"><img class="inline_icon" src="img/safe_secure.png" height="35" width="32"/>Safe and
+                Secure</h4>
               <ul class="px-0">
-                <li class="mb-1">The advanced technology platform is hosted in the group’s own, highly secured data center.</li>
+                <li class="mb-1">The advanced technology platform is hosted in the group’s own, highly secured data
+                  center.
+                </li>
                 <li class="mb-1">Business continuity is secured by the 24/7 support and the backup/disaster
                   recovery sites.
                 </li>
@@ -180,7 +193,8 @@
               <h4 class="mb-1"><img class="inline_icon" src="img/compliance.png" height="35" width="35"/>Compliance</h4>
               <ul class="px-0">
                 <li class="mb-1">We provide local compliance and regulatory assistance to our clients.</li>
-                <li class="mb-0">Our ability to offer a fully customizable service secures the compliance to laws and regulations for the core functions of the service (messaging, routing,
+                <li class="mb-0">Our ability to offer a fully customizable service secures the compliance to laws and
+                  regulations for the core functions of the service (messaging, routing,
                   billing, and reporting).
                 </li>
               </ul>
@@ -202,8 +216,8 @@
     <div class="container gsapUp">
       <h2 class="mb-2 text-center">Our partners</h2>
       <div class="partner_images "><img src="./img/tele2.png" alt="tele2" width="170"><img src="./img/cosmote.png"
-                                                                                          alt="cosmote" width="250"
-                                                                                          height="56"><img
+                                                                                           alt="cosmote" width="250"
+                                                                                           height="56"><img
         src="./img/elisa.png" alt="elisa" width="160" height="64"><img src="./img/vodafone.png" alt="vodafone"
                                                                        width="210" height="57px"></div>
       <div class="partner_images "><img src="./img/mtn.png" alt="mtn" width="132" height="75"><img
@@ -218,17 +232,17 @@
       <h2 class="text-center">We specialize on</h2>
       <div class="col-sm-6">
         <a href="#messaging gsapLeft">
-        <div class="rounded_container gradient-container__messaging xs-mb-1 gsapLeft">
-          <h4 class="text-center text-white">Messaging</h4>
+          <div class="rounded_container gradient-container__messaging xs-mb-1 gsapLeft">
+            <h4 class="text-center text-white">Messaging</h4>
 
-        </div>
+          </div>
         </a>
       </div>
       <div class="col-sm-6">
         <a href="#payment_methods ">
-        <div class="rounded_container gradient-container__mobile-payment gsapRight">
-          <h4 class="text-center text-white">Mobile payment methods</h4>
-        </div>
+          <div class="rounded_container gradient-container__mobile-payment gsapRight">
+            <h4 class="text-center text-white">Mobile payment methods</h4>
+          </div>
         </a>
       </div>
       <div class="clearfix"></div>
@@ -276,7 +290,7 @@
             <p class="text-grey mb-0">With tailored
               API’s and technical support our
               SMS solutions
-            <span class="text-accent">easily
+              <span class="text-accent">easily
               integrated.</span></p>
           </div>
 
@@ -338,17 +352,19 @@
       </div>
       <div class="col-sm-6">
         <a href="#premiumsms">
-        <div class="rounded_container bg-default xs-mb-1 py-1 px-2 gsapLeft">
-          <h4 class="text-center ">Premium SMS</h4>
+          <div class="rounded_container bg-default xs-mb-1 py-1 px-2 gsapLeft">
+            <h4 class="text-center ">Premium SMS</h4>
 
-        </div></a>
+          </div>
+        </a>
       </div>
       <div class="col-sm-6">
         <a href="#carrierbilling">
-        <div class="rounded_container bg-default py-1 px-2 gsapRight">
-          <h4 class="text-center ">Carrier Billing
-            (DCB)</h4>
-        </div></a>
+          <div class="rounded_container bg-default py-1 px-2 gsapRight">
+            <h4 class="text-center ">Carrier Billing
+              (DCB)</h4>
+          </div>
+        </a>
       </div>
 
     </div>
@@ -377,7 +393,8 @@
               fill="var(--main-color)"/>
           </svg>
         </div>
-        <div class="col-sm-4 col-xs-5 rounded_container gradient-container gsapLeft"><p class="mb-0 text-white text-thin">The
+        <div class="col-sm-4 col-xs-5 rounded_container gradient-container gsapLeft"><p
+          class="mb-0 text-white text-thin">The
           purchase amount is
           charged to their
           <span class="text-normal">mobile phone bill.</span></p>
@@ -390,16 +407,20 @@
       <div class="col-xs-12"><h3 class="text-grey">Benefits of<br>Premium SMS</h3></div>
       <div class="grid-container col-xs-12">
         <div class="rounded_container bg-default grid-w-5 grid-h-3 gsapLeft"><h4>Global reach</h4> <img src=""
-                                                                                               alt="global reach"></div>
-        <div class="rounded_container bg-default grid-w-7 grid-h-6 gsapRight"><h4>High conversion rates compared to credit cards –
+                                                                                                        alt="global reach">
+        </div>
+        <div class="rounded_container bg-default grid-w-7 grid-h-6 gsapRight"><h4>High conversion rates compared to
+          credit cards –
           no long form
           fills
           needed.
         </h4> <img src="" alt="high conversion"></div>
-        <div class="rounded_container bg-default grid-w-5 grid-h-6 gsapLeft"><h4>Fast and easy activation with a dedicated SMS
+        <div class="rounded_container bg-default grid-w-5 grid-h-6 gsapLeft"><h4>Fast and easy activation with a
+          dedicated SMS
           Short code</h4> <img
           src="" alt="fast activation"></div>
-        <div class="rounded_container bg-default grid-w-7 grid-h-3 gsapRight"><h4 class="max-w-480">Available for both one-time
+        <div class="rounded_container bg-default grid-w-7 grid-h-3 gsapRight"><h4 class="max-w-480">Available for both
+          one-time
           purchases and subscriptions
         </h4> <img src="" alt="subscriptions"></div>
       </div>
@@ -470,7 +491,8 @@
               fill="var(--main-color)"/>
           </svg>
         </div>
-        <div class="col-sm-4 col-xs-5 rounded_container gradient-container gsapLeft"><p class="mb-0 text-white text-thin">Then
+        <div class="col-sm-4 col-xs-5 rounded_container gradient-container gsapLeft"><p
+          class="mb-0 text-white text-thin">Then
           purchase is then added on mobile bill or prepaid account, <span class="text-normal">without
         any action</span> on user’s part, nor additional costs.
         </p>
@@ -484,7 +506,7 @@
       <div class="col-xs-12"><h3 class="text-grey">Benefits of<br>Carrier Billing</h3></div>
       <div class="grid-container col-xs-12">
         <div class="rounded_container bg-default grid-w-7 grid-h-3 gsapLeft"><h4>Access to new users </h4> <img src=""
-                                                                                                       alt="global reach">
+                                                                                                                alt="global reach">
         </div>
         <div class="rounded_container bg-default grid-w-5 grid-h-6 gsapRight"><h4>Simple and fast checkout
         </h4> <img src="" alt="high conversion"></div>
@@ -569,43 +591,50 @@
       </div>
       <div class="clearfix"></div>
       <div class="flex-wrap">
-      <div class="col-sm-8">
-        <p>We feel that nothing should stop your business reaching its potential, which is why we have friendly,
-          helpful staff ready to answer your questions.</p>
-        <p>Whether you’re just getting started with mobile
-          messaging & payments or are looking to expand and existing or complex strategy, our team are on
-          hand to help find the best solution for you and to offer support you whenever you need it.</p>
-      </div>
-      <div  class="col-sm-4 d-flex flex-column justify-content-between">
-        <div class="input-container"><input placeholder=" " id="name" class="text-input" type="text"><label for="name">First Name</label></div>
-        <div class="input-container"><input placeholder=" " id="lastname" class="text-input" type="text"><label for="lastname">Last Name</label></div>
-        <div class="input-container"><input placeholder=" " id="email" class="text-input" type="text"><label for="email">Email</label></div>
+        <div class="col-sm-8">
+          <p>We feel that nothing should stop your business reaching its potential, which is why we have friendly,
+            helpful staff ready to answer your questions.</p>
+          <p>Whether you’re just getting started with mobile
+            messaging & payments or are looking to expand and existing or complex strategy, our team are on
+            hand to help find the best solution for you and to offer support you whenever you need it.</p>
+        </div>
+        <div class="col-sm-4 d-flex flex-column justify-content-between">
+          <div class="input-container"><input placeholder=" " id="name" class="text-input" type="text"><label
+            for="name">First Name</label></div>
+          <div class="input-container"><input placeholder=" " id="lastname" class="text-input" type="text"><label
+            for="lastname">Last Name</label></div>
+          <div class="input-container"><input placeholder=" " id="email" class="text-input" type="text"><label
+            for="email">Email</label></div>
 
-        <input class="btn btn-primary" value="Submit" type="submit"></div>
+          <input class="btn btn-primary" value="Submit" type="submit"></div>
       </div>
 
     </div>
   </section>
-  <footer >
-<div class="col-sm-12 py-1 d-flex justify-content-between align-items-center">
-  <nav>
-    <a href="#company">Company</a>
-    <a href="#services">Services</a>
-    <a href="">Blog</a>
+  <footer>
+    <div class="col-sm-12 py-1 d-flex justify-content-between align-items-center">
+      <nav>
+        <a href="#company">Company</a>
+        <a href="#services">Services</a>
+        <a href="">Blog</a>
 
-  </nav>
-  <img class="logoCenter" src="" alt="logo">
-  <span class="text-thin text-center">© Netsmart&nbsp;<br><span id="year"></span></span>
+      </nav>
+      <img class="logoCenter" src="" alt="logo">
+      <span class="text-thin text-center">© Netsmart&nbsp;<br><span id="year"></span></span>
 
-</div>
-    <div class="col-sm-12"><div class="divider div-transparent mb-0"></div></div>
+    </div>
+    <div class="col-sm-12">
+      <div class="divider div-transparent mb-0"></div>
+    </div>
     <div class="col-sm-12 py-1 text-center">
-<div><a class="px-1" href=""><img src="" alt="social"></a><a class="px-1" href=""><img src="" alt="social"></a><a class="px-1" href=""><img src="" alt="social"></a></div>
+      <div><a class="px-1" href=""><img src="" alt="social"></a><a class="px-1" href=""><img src="" alt="social"></a><a
+        class="px-1" href=""><img src="" alt="social"></a></div>
     </div>
   </footer>
 </div>
 <!-- Add your site or application content here -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
 
 <script>
   function splashText() {
@@ -632,6 +661,7 @@
       e.style.animationDelay = randomDelay + "s";
     });
   }
+
   splashText()
 
   //highlight Text
@@ -641,6 +671,8 @@
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/particles.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
   window.ga = function () {
@@ -654,6 +686,110 @@
   ga('send', 'pageview')
 </script>
 <script src="https://www.google-analytics.com/analytics.js" async></script>
+<script type="module">
+  let vh = window.innerHeight * 0.01;
+  const heroSection = document.querySelector('.hero')
+  window.addEventListener('resize', () => {
+    // We execute the same script as before
+    vh = window.innerHeight * 0.01;
+    document.documentElement.style.setProperty('--vh', `${vh}px`);
+  });
+  import * as THREE from 'https://cdn.skypack.dev/three@0.136';
+  import {OrbitControls} from 'https://cdn.skypack.dev/three@0.136/examples/jsm/controls/OrbitControls.js';
+  import {RGBELoader} from 'https://cdn.skypack.dev/three@0.136/examples/jsm/loaders/RGBELoader.js';
+  import {GLTFLoader} from 'https://cdn.skypack.dev/three@0.136/examples/jsm/loaders/GLTFLoader.js';
+
+
+  let container;
+  let camera;
+  let renderer;
+  let scene;
+  let phone;
+
+
+  function init() {
+    container = document.getElementById("phone");
+    //Create scene
+    scene = new THREE.Scene();
+
+    const fov = 35;
+    const aspect = container.offsetWidth / container.offsetHeight;
+    const near = 0.7;
+    const far = 100;
+
+    //Camera setup
+    camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
+    camera.position.set(0.5, -0.5, 2);
+
+    const ambient = new THREE.AmbientLight(0x404040, 2);
+    scene.add(ambient);
+
+    const light = new THREE.DirectionalLight(0xffffff, 1);
+    light.position.set(50, 0, 0);
+    scene.add(light);
+    //Renderer
+    renderer = new THREE.WebGLRenderer({antialias: true, alpha: true});
+    renderer.setSize(container.clientWidth, container.clientHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
+    renderer.toneMappingExposure = 0.7;
+    renderer.outputEncoding = THREE.sRGBEncoding;
+    container.appendChild(renderer.domElement);
+
+    //Load Model
+
+
+
+    let loader = new GLTFLoader();
+    loader.load("./3d/phone3d/scene.gltf", function (gltf) {
+
+      phone = gltf.scene;
+      scene.add(phone);
+      phone.rotation.y = 2.7
+      animate();
+
+
+    });
+
+    new RGBELoader().load('https://assets.codepen.io/7014830/studio.hdr', function (texture) {
+      texture.mapping = THREE.EquirectangularReflectionMapping;
+      scene.environment = texture;
+      container.classList.add("visible");
+    })
+
+
+    window.addEventListener('dblclick', () => {
+      console.log(camera.position)
+    })
+
+    function animate() {
+      requestAnimationFrame(animate);
+      phone.rotation.y += 0.001;
+      renderer.render(scene, camera);
+    }
+  }
+
+  init();
+
+  function onWindowResize() {
+    camera.aspect = container.clientWidth / container.clientHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(container.clientWidth, container.clientHeight);
+  }
+
+
+  window.addEventListener("resize", onWindowResize);
+  //control
+  const controls = new OrbitControls(camera, renderer.domElement);
+  controls.enableZoom = false;
+  controls.maxDistance = 2.2;
+  controls.minDistance = 1.8;
+  controls.enableDamping = true;
+  controls.dampingFactor = 0.035
+  controls.maxPolarAngle = Math.PI / 1.3
+
+
+</script>
+
 </body>
 
 </html>
