--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div ><h1 class="cta mb-1">Netsmart</h1>
         <h4 class=" text-white mb-1">is a global leader in mobile payments and messaging.</h4>
         <p class="herobanner__paragraph text-thin text-white">We provide global partners with a wide range of custom-made solutions in carrier billing, bulk messaging, content management and delivery, mobile marketing, and customer interaction in over 200 countries.</p>
-        <a class="btn herobanner__cta btn-primary" href="#services">Our Services</a>
+        <a class="btn herobanner__cta btn-warning" href="#services">Our Services</a>
       </div>
       <div class="hero__phoneContainer">
         <div id="phone" class="visible">
