--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
 
     //Camera setup
     camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
-    camera.position.set(0.5, -0.5, 1.5);
+    camera.position.set(0, 0, 1.8);
 
     const ambient = new THREE.AmbientLight(0x404040, 2);
     scene.add(ambient);
@@ -897,7 +897,6 @@
       phone.rotation.y = 2.7
       animate();
 
-
     });
 
     new RGBELoader().load('https://assets.codepen.io/7014830/studio.hdr', function (texture) {
@@ -910,10 +909,18 @@
     window.addEventListener('dblclick', () => {
       console.log(camera.position)
     })
-
+    let rotationSpeed = 0
     function animate() {
       requestAnimationFrame(animate);
-      phone.rotation.y += 0.001;
+
+      if (phone.rotation.y >= 3.8){
+        rotationSpeed = -0.001
+      } else {
+        if (phone.rotation.y <= 2.7)
+          rotationSpeed = 0.001
+      }
+      phone.rotation.y += rotationSpeed;
+
       renderer.render(scene, camera);
     }
   }
@@ -929,13 +936,15 @@
 
   window.addEventListener("resize", onWindowResize);
   //control
-  const controls = new OrbitControls(camera, renderer.domElement);
-  controls.enableZoom = false;
-  controls.maxDistance = 2.2;
-  controls.minDistance = 1.8;
-  controls.enableDamping = true;
-  controls.dampingFactor = 0.035
-  controls.maxPolarAngle = Math.PI / 1.3
+  // const controls = new OrbitControls(camera, renderer.domElement);
+  // controls.enableZoom = false;
+
+  // controls.enableDamping = true;
+  // controls.dampingFactor = 0.035
+  // controls.maxPolarAngle = Math.PI / 1.8
+  // controls.minPolarAngle = Math.PI / -1.8
+  // controls.minAzimuthAngle = -1.5*Math.PI
+  // controls.maxAzimuthAngle = 1.5*Math.PI
 
 
 </script>
