--- a/support.html
+++ b/support.html
@@ -63,22 +63,28 @@
     <div class="clearfix"></div>
     <div class="flex-wrap">
       <div class="col-sm-8">
-        <p>We feel that nothing should stop your business reaching its potential, which is why we have friendly,
-          helpful staff ready to answer your questions.</p>
-        <p>Whether you’re just getting started with mobile
-          messaging & payments or are looking to expand and existing or complex strategy, our team are on
-          hand to help find the best solution for you and to offer support you whenever you need it.</p>
+        <p>Whether you have questions, require assistance with your account, need help
+          with billing, or have a technical concern, we're here to ensure you have a smooth and positive experience with
+          our services.</p>
+        <p>Please complete the form below with your inquiry or issue, and our dedicated support team will respond
+          promptly to assist you.</p>
+        <p>Thank you for choosing our services, and we look forward to assisting you with any questions or concerns you may have.</p>
       </div>
-      <div class="col-sm-4 d-flex flex-column justify-content-between">
-        <div class="xs-mb-1 input-container"><input placeholder=" " id="name" class="text-input" type="text"><label
-          for="name">First Name</label></div>
-        <div class="xs-mb-1 input-container"><input placeholder=" " id="lastname" class="text-input" type="text"><label
-          for="lastname">Last Name</label></div>
-        <div class="xs-mb-1 input-container"><input placeholder=" " id="email" class="text-input" type="text"><label
+      <form name="contactSuccess" class="col-sm-4 d-flex flex-column justify-content-between">
+        <input type="hidden" name="form-name" value="supportForm">
+        <div class="xs-mb-1 input-container"><input placeholder=" " id="name" name="fullContactName" class="text-input"
+                                                    type="text"><label
+          for="name">Full Name</label></div>
+        <div class="xs-mb-1 input-container"><input placeholder=" " id="contactEmail" name="contactEmail" id="lastname"
+                                                    class="text-input" type="text"><label
+          for="lastname">Email</label></div>
+        <div class="xs-mb-1 input-container"><input placeholder=" " name="formContactPhone" id="email"
+                                                    class="text-input" type="text"><label
           for="email">Email</label></div>
-        <div class="xs-mb-1 input-container"><textarea style="font-size: 14px; min-height: 100px"  placeholder="Details" id="email" class="text-input" type="text"></textarea></div>
+        <div class="xs-mb-1 input-container"><textarea style="font-size: 14px; min-height: 100px" placeholder="Details"
+                                                       id="email" class="text-input" type="text"></textarea></div>
 
-        <input class="btn btn-primary" value="Submit" type="submit"></div>
+        <input class="btn btn-primary" value="Submit" type="submit"></form>
     </div>
 
   </div>
@@ -103,13 +109,16 @@
   </div>
   <div class="col-sm-12 py-1 text-center">
 
-    <a href=""><svg class="social" viewBox="0 0 111 110" xmlns="http://www.w3.org/2000/svg">
-      <linearGradient id="grad2" x1="0%" y1="0%" x2="0%" y2="100%">
-        <stop offset="0%" style="stop-color:#c10d3d;stop-opacity:1" />
-        <stop offset="100%" style="stop-color:#5f0b32;stop-opacity:1" />
-      </linearGradient>
-      <path fill="url(#grad2)" d="M102.571 0H7.86545C3.52589 0 0 3.57521 0 7.96408V102.497C0 106.886 3.52589 110.462 7.86545 110.462H102.571C106.911 110.462 110.462 106.886 110.462 102.497V7.96408C110.462 3.57521 106.911 0 102.571 0ZM33.385 94.6813H17.013V41.9655H33.4097V94.6813H33.385ZM25.199 34.7658C19.9472 34.7658 15.7063 30.5002 15.7063 25.273C15.7063 20.0458 19.9472 15.7802 25.199 15.7802C30.4262 15.7802 34.6918 20.0458 34.6918 25.273C34.6918 30.5249 30.4509 34.7658 25.199 34.7658ZM94.7553 94.6813H78.3833V69.0385C78.3833 62.9236 78.26 55.0582 69.8768 55.0582C61.3456 55.0582 60.0388 61.7155 60.0388 68.5946V94.6813H43.6668V41.9655H59.3731V49.1652H59.595C61.7894 45.0229 67.1399 40.6587 75.104 40.6587C91.6732 40.6587 94.7553 51.5816 94.7553 65.7838V94.6813Z" />
-    </svg></a>
+    <a href="">
+      <svg class="social" viewBox="0 0 111 110" xmlns="http://www.w3.org/2000/svg">
+        <linearGradient id="grad2" x1="0%" y1="0%" x2="0%" y2="100%">
+          <stop offset="0%" style="stop-color:#c10d3d;stop-opacity:1"/>
+          <stop offset="100%" style="stop-color:#5f0b32;stop-opacity:1"/>
+        </linearGradient>
+        <path fill="url(#grad2)"
+              d="M102.571 0H7.86545C3.52589 0 0 3.57521 0 7.96408V102.497C0 106.886 3.52589 110.462 7.86545 110.462H102.571C106.911 110.462 110.462 106.886 110.462 102.497V7.96408C110.462 3.57521 106.911 0 102.571 0ZM33.385 94.6813H17.013V41.9655H33.4097V94.6813H33.385ZM25.199 34.7658C19.9472 34.7658 15.7063 30.5002 15.7063 25.273C15.7063 20.0458 19.9472 15.7802 25.199 15.7802C30.4262 15.7802 34.6918 20.0458 34.6918 25.273C34.6918 30.5249 30.4509 34.7658 25.199 34.7658ZM94.7553 94.6813H78.3833V69.0385C78.3833 62.9236 78.26 55.0582 69.8768 55.0582C61.3456 55.0582 60.0388 61.7155 60.0388 68.5946V94.6813H43.6668V41.9655H59.3731V49.1652H59.595C61.7894 45.0229 67.1399 40.6587 75.104 40.6587C91.6732 40.6587 94.7553 51.5816 94.7553 65.7838V94.6813Z"/>
+      </svg>
+    </a>
 
   </div>
   <div class="text-thin text-grey col-sm-12 text-center mb-1"> © Netsmart&nbsp;<span id="year"></span></div>
